--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-python==3.9
-# Step 2: Python 3.9 ke liye stable library versions
-tensorflow==2.12.0
-tf-keras==2.12.0
+# Core ML libraries
+tensorflow==2.13.0
 transformers==4.30.0
-torch==2.1.0
-numpy==1.23.5
-# Step 3: Baaki ki libraries
+torch==1.13.1+cpu
+torchvision==0.14.1+cpu
+torchaudio==0.13.1+cpu
+--find-links https://download.pytorch.org/whl/torch_stable.html
+
+# Supporting libraries
+numpy==1.24.3
 streamlit==1.32.2
-Pillow==10.2.0
+Pillow==10.0.0
