--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-# Core ML libraries
-tensorflow==2.13.0
-transformers==4.30.0
-torch==1.13.1+cpu
-torchvision==0.14.1+cpu
-torchaudio==0.13.1+cpu
---find-links https://download.pytorch.org/whl/torch_stable.html
+streamlit
+tensorflow
+transformers
+numpy
+Pillow
 
-# Supporting libraries
-numpy==1.24.3
-streamlit==1.32.2
-Pillow==10.0.0
