--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-tensorflow
-transformers
-numpy
-Pillow
+tensorflow==2.13.0
+tf-keras==2.13.0
+transformers==4.21.0
+streamlit==1.32.2
+numpy==1.24.3
+Pillow==10.0.0
 
