--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.32.2
-tensorflow==2.20.0
-tf-keras==2.15.1
-numpy==1.26.4
+tensorflow==2.13.0
+numpy==1.24.3
 Pillow==10.0.0
-transformers==4.41.2
+transformers==4.21.0
+protobuf==3.20.3
+
 
